<resources>
    <string name="app_name">My Application</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
</resources>